Fix note spacing bug.

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -269,6 +269,7 @@
             .li-text {
               clear: both;
               margin-top: 10px;
+              white-space: pre-line;
             }
 
             .li-attachment {
